--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,10 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #F39E60;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 @layer base {
